20-ingress/deploymentforIngress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ingressdeploymentdemo
  name: ingressdeploymentdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingressdeploymentdemo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ingressdeploymentdemo
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        resources: {}
status: {}
