20-ingress/myfirstIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: simple
spec:
  rules:
  - host: hello-world.local
    http:
      paths:
      - backend:
          service:
            name: ingressdeploymentdemo
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
